--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <center>
-	<h1>Welcome to Jenkins CI/CD</h1>
+	<h1>Welcome to CI/CD world</h1>
 	<h1>v5.0</h1>
 	<br><hr>
 	<p>Demo of Jenkins CI/CD Pipeline using BlueOcean and Kubernetes Continuous Deployment plugins</p> 
